# bevy_interleave

./: Cargo.toml  README.md
.github/workflows/: test.yml
crates/bevy_interleave_interface/: Cargo.toml
crates/bevy_interleave_interface/src/: lib.rs  planar.rs  storage.rs  texture.rs
crates/bevy_interleave_macros/: Cargo.toml
crates/bevy_interleave_macros/src/: lib.rs  packed.rs  planar.rs
crates/bevy_interleave_macros/src/bindings/: storage.rs  texture.rs
examples/: app.rs  minimal.rs
src/: lib.rs  prelude.rs
test/: lib.rs
