[package]
name = "bevy_interleave"
description = "bevy support for e2e packed to planar bind groups"
version = "0.2.0"
edition = "2021"
authors = ["mosure <mitchell@mosure.me>"]
license = "MIT"
keywords = [
  "bevy",
  "shader-types",
]
homepage = "https://github.com/mosure/bevy_interleave"
repository = "https://github.com/mosure/bevy_interleave"
readme = "README.md"

[workspace]
exclude = [
  ".devcontainer",
  ".github",
  "docs",
  "dist",
  "build",
  "assets",
  "credits",
]
members = [
  "crates/*",
]


[dependencies]
bevy_interleave_interface = { path = "crates/bevy_interleave_interface", version = "0.2.0" }
bevy_interleave_macros = { path = "crates/bevy_interleave_macros", version = "0.2.0" }
bytemuck = "1.14"
serde = "1.0"

[dependencies.bevy]
version = "0.13"
default-features = false
features = ["bevy_asset", "bevy_render"]


[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"


[dependencies.web-sys]
version = "0.3"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Location',
  'Node',
  'Window',
]


[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1


[lib]
path = "src/lib.rs"
