[package]
name = "bevy_interleave_interface"
version = "0.2.0"
edition = "2021"
description = "interface for e2e packed to planar bind groups"
homepage = "https://github.com/mosure/bevy_interleave"
repository = "https://github.com/mosure/bevy_interleave"
license = "MIT"
keywords = [
  "bevy",
  "shader-types",
]


[dependencies.bevy]
version = "0.13"
default-features = false
features = ["bevy_render"]
