[package]
name = "bevy_interleave_macros"
version = "0.2.0"
edition = "2021"
description = "macros for e2e packed to planar bind groups"
homepage = "https://github.com/mosure/bevy_interleave"
repository = "https://github.com/mosure/bevy_interleave"
license = "MIT"
keywords = [
  "bevy",
  "shader-types",
]


[dependencies]
bevy_interleave_interface = { path = "../bevy_interleave_interface", version = "0.2.0" }
bytemuck = "1.14"
convert_case = "0.6"
proc-macro2 = "1.0"
quote = "1.0"
sha1 = "0.10"
syn = "2.0"

[dependencies.bevy]
version = "0.13"
default-features = false
features = ["bevy_asset", "bevy_render"]


[lib]
proc-macro = true
